Refactor market endpoints
