# docs/openapi.json
@@ -143,6 +143,122 @@
           }
         }
       }
+    },
+    "/v2/market/averagecardprices": {
+      "get": {
+        "parameters": [
+          { "$ref": "#/components/parameters/Currency" },
+          {
+            "name": "appids",
+            "in": "query",
+            "required": true,
+            "style": "array",
+            "schema": {
+              "type": "array",
+              "items": { "type": "integer" }
+            }
+          }
+        ],
+        "responses": {
+          "default": {
+            "$ref": "#/components/schemas/ErrorResponse"
+          },
+          "200": {
+            "description": "Success",
+            "content": {
+              "application/json": {
+                "type": "object",
+                "properties": {
+                  "result": { "$ref": "#/components/schemas/SuccessResult" },
+                  "data": {
+                    "type": "object",
+                    "propertyNames": { "pattern": "^\\d+$" },
+                    "additionalProperties": {
+                      "type": "object",
+                      "properties": {
+                        "regular": { "type": "number" },
+                        "foil": { "type": "number" }
+                      }
+                    }
+                  }
+                }
+              }
+            },
+            "examples": {
+              "successResponse": {
+                "value": {
+                  "result": "success",
+                  "data": {
+                    "220": {
+                      "regular": 0.087143,
+                      "foil": 0.707143
+                    },
+                    "440": {
+                      "foil": 0.905714,
+                      "regular": 0.051429
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/v2/market/cardprices": {
+      "get": {
+        "parameters": [
+          { "$ref": "#/components/parameters/Currency" },
+          { "$ref": "#/components/parameters/AppId" }
+        ],
+        "responses": {
+          "default": {
+            "$ref": "#/components/schemas/ErrorResponse"
+          },
+          "200": {
+            "description": "Success",
+            "content": {
+              "application/json": {
+                "type": "object",
+                "properties": {
+                  "result": { "$ref": "#/components/schemas/SuccessResult" },
+                  "data": {
+                    "type": "object",
+                    "propertyNames": { "type": "string" },
+                    "additionalProperties": {
+                      "type": "object",
+                      "properties": {
+                        "img": { "type": "string" },
+                        "url": { "type": "string" },
+                        "price": { "type": "number" }
+                      }
+                    }
+                  }
+                }
+              }
+            },
+            "examples": {
+              "successResponse": {
+                "value": {
+                  "result": "success",
+                  "data": {
+                    "Alyx Vance": {
+                      "img": "IzMF03bk9WpSBq-S-ekoE33L-iLqGFHVaU25ZzQNQcXdA3g5gMEPvUZZEfSMJ6dESN8p_2SVTY7V2NsNxGVIwXpaL3_Z0W11LtNtNsjDhgz2oOWIQXDzMG-WKXeNHVs5HLBXNG6IqDCitO6TSjGbEukkQAoCfKMH-mFBaJyXf0xqwtVUuWG9hXt0Excvd5gXJFfjzndKN74gkHAUcchSynbwIMaPjQplahRtWbCxX72TOdPxmXwlQ1o5SLZcaYl9HTjTpg",
+                      "url": "220-Alyx%20Vance",
+                      "price": 0.09
+                    },
+                    "Alyx Vance (Foil)": {
+                      "img": "IzMF03bk9WpSBq-S-ekoE33L-iLqGFHVaU25ZzQNQcXdA3g5gMEPvUZZEfSMJ6dESN8p_2SVTY7V2NsNxGVIwXpaL3_Z0W11LtNtNsjDhgz2oOWIQXDzMG-WKXeNHVs5HLBXNG6IqDCitO6TSjGbEukkQAoCfKMH-mFBaJyXf0xqwtVUuWG9hXt0Excvd5gWKF-6kiwXab8kkHZAJpMGnCT3I5eIgllgbEI8XurmVryUa4P3wS11Q1o5SLZcaYlIj14tyA",
+                      "url": "220-Alyx%20Vance%20%28Foil%29",
+                      "price": 0.82
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
     }
   },
   "components": {
@@ -153,6 +269,14 @@
         "required": true,
         "schema": {
           "type": "integer"
+        }
+      },
+      "Currency": {
+        "name": "currency",
+        "in": "query",
+        "required": true,
+        "schema": {
+          "$ref": "#/components/schemas/CurrencyCode"
         }
       }
     },
